<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">

        <LinearLayout
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_gravity="center"
                android:src="@drawable/back_arrow"
                android:contentDescription="@string/todo" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/user"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="4dp"
                    tools:src="@drawable/icon"
                    app:civ_border_width="0dp"
                    app:civ_shadow="true"
                    app:civ_shadow_radius="0" />

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:src="@drawable/online"
                    android:layout_alignBottom="@+id/user"
                    android:layout_alignEnd="@+id/user"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/todo" />

            </RelativeLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    tools:text="@string/app_name"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/black"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/online"
                    />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="end"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/call"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="32dp"
                    android:src="@drawable/call"
                    android:contentDescription="@string/todo" />

                <ImageView
                    android:id="@+id/video_call"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/video_camera"
                    android:layout_marginEnd="32dp"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/todo" />

            </LinearLayout>

        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_below="@+id/top"
            android:layout_above="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/timer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="8dp"
                    app:cardBackgroundColor="@color/teal_700"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp"
                    app:elevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:contentDescription="@string/todo"
                            android:layout_gravity="center"
                            android:layout_margin="8dp"
                            android:src="@drawable/timer" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:text="@string/timer_untuk_panggilan"
                            android:layout_marginStart="16dp"
                            android:layout_gravity="center"
                            android:fontFamily="sans-serif-medium"
                            android:textColor="@color/white"
                            />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/waktu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_below="@+id/timer"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:orientation="vertical">

                            <RadioGroup
                                android:id="@+id/waktunya"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical"
                                tools:ignore="UselessParent">

                                <RadioButton
                                    android:id="@+id/radio_sekarang"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/call_now" />

                                <RadioButton
                                    android:id="@+id/radio_10"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/_10_second_call_timer" />

                                <RadioButton
                                    android:id="@+id/radio_30"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/_30_second_call_timer" />

                                <RadioButton
                                    android:id="@+id/radio_11"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/_1_minute_call_timert" />

                                <RadioButton
                                    android:id="@+id/radio55"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/_5_minute_call_timer" />
                            </RadioGroup>
                        </LinearLayout>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_below="@+id/waktu"
                    android:id="@+id/temp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="8dp"
                    app:cardBackgroundColor="@color/teal_700"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp"
                    app:elevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:contentDescription="@string/todo"
                            android:layout_gravity="center"
                            android:layout_margin="8dp"
                            android:src="@drawable/template" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:text="@string/template"
                            android:layout_marginStart="16dp"
                            android:layout_gravity="center"
                            android:fontFamily="sans-serif-medium"
                            android:textColor="@color/white"
                            />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_below="@+id/temp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="8dp"
                    app:cardCornerRadius="6dp"
                    app:cardElevation="4dp"
                    app:elevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="5dp"
                            android:orientation="vertical">

                            <RadioGroup
                                android:id="@+id/template"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical">

                                <RadioButton
                                    android:id="@+id/wa"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/whatsapp" />

                                <RadioButton
                                    android:id="@+id/fb"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/facebook" />

                                <RadioButton
                                    android:id="@+id/tele"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/telegram" />
                            </RadioGroup>
                        </LinearLayout>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>


            </RelativeLayout>


        </androidx.core.widget.NestedScrollView>



        <RelativeLayout
            android:id="@+id/banner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"/>



    </RelativeLayout>

</layout>