<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">


        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/icon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/todo"/>

        <LinearLayout
            android:layout_above="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/chat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/teal_700"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp"
                    app:elevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="4dp">

                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/chat" />

                        <TextView
                            android:id="@+id/chatx"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="4dp"
                            android:fontFamily="sans-serif-medium"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            tools:text="@string/chat" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/video_call"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/purple_700"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp"
                    app:elevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="4dp">

                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/video_call" />

                        <TextView
                            android:id="@+id/callx"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="4dp"
                            android:fontFamily="sans-serif-medium"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            tools:text="@string/video_call" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/wallpaper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/purple_700"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp"
                    app:elevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="4dp">

                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/wallpaper" />

                        <TextView
                            android:id="@+id/walx"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="4dp"
                            android:fontFamily="sans-serif-medium"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            tools:text="@string/wallpaper" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/keyboard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/teal_700"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp"
                    app:elevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="4dp">

                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/keyboard" />

                        <TextView
                            android:id="@+id/keyxx"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="4dp"
                            android:fontFamily="sans-serif-medium"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            tools:text="@string/keyboard" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/ringtone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/purple_700"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp"
                    app:elevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="4dp">

                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="78dp"
                            android:layout_margin="4dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/baseline_library_music_24" />

                        <TextView
                            android:id="@+id/ring"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="4dp"
                            android:fontFamily="sans-serif-medium"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            tools:text="Ringtone" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


            </LinearLayout>


        </LinearLayout>


        <RelativeLayout
            android:id="@+id/banner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>


</layout>